# whisper-type

./: .gitignore  README.md  config.py  install.sh  pyproject.toml  requirements.txt  run.sh  start.sh  whisper-dictation-linux.py
