[project]
name = "whisper-dictation"
version = "1.0.0"
description = "Offline voice dictation for Linux using OpenAI Whisper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "pyaudio",
    "pynput",
    "numpy",
    "pystray",
    "Pillow",
    "PyGObject",
]

[project.scripts]
whisper-dictation = "whisper_dictation_linux:main"
